--- a/project-g1/package.json
+++ b/project-g1/package.json
@@ -11,6 +11,7 @@
   },
   "dependencies": {
     "firebase": "^10.7.1",
+    "image-average-color": "^1.0.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-router-dom": "^6.21.1",
