--- a/project-g1/package.json
+++ b/project-g1/package.json
@@ -10,7 +10,9 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@firebase/firestore": "^4.4.0",
     "firebase": "^10.7.1",
+    "firebase-admin": "^12.0.0",
     "image-average-color": "^1.0.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
