--- a/project-g1/package.json
+++ b/project-g1/package.json
@@ -11,6 +11,7 @@
   },
   "dependencies": {
     "@firebase/firestore": "^4.4.0",
+    "axios": "^1.6.5",
     "firebase": "^10.7.1",
     "firebase-admin": "^12.0.0",
     "image-average-color": "^1.0.0",
