--- a/project-g1/package.json
+++ b/project-g1/package.json
@@ -18,6 +18,7 @@
     "image-average-color": "^1.0.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-firebase-hooks": "^5.1.1",
     "react-router-dom": "^6.21.1",
     "react-slick": "^0.29.0",
     "slick-carousel": "^1.8.1",
